--- a/css/ergosleep.css
+++ b/css/ergosleep.css
@@ -16,6 +16,8 @@
   --lwc-colorBackgroundPathLost: #F51D27 !important;
   --lwc-colorTextDestructive: #F51D27 !important;
   --lwc-colorBorderError: #F51D27 !important;
+  --lwc-colorBackgroundPathActive: #212121 !important;
+  --lwc-colorBackgroundPathComplete: #00D75E !important;
 }
 
 #lightningLocator {
@@ -111,6 +113,19 @@
 }
 #lightningLocator .slds-text-heading_medium {
   color: #212121;
+}
+#lightningLocator .uiInput--lookup .lookup__item.highlighted a {
+  background-color: #212121;
+  color: #ffffff !important;
+}
+#lightningLocator .uiInput--lookup .lookup__item.highlighted a .uiOutputText {
+  color: #ffffff !important;
+}
+#lightningLocator .slds-rich-text-editor__output #for-dave-operatinghours,
+#lightningLocator .slds-rich-text-editor__output #for-dave-holidays {
+  font-size: 13px !important;
+  color: #7b7b7b !important;
+  margin-bottom: 24px;
 }
 #lightningLocator .actionButtonBar .flow-button__NEXT,
 #lightningLocator .actionButtonBar .flow-button__FINISH {
