Change id's of tables

--- a/sass/ergosleep.scss
+++ b/sass/ergosleep.scss
@@ -159,8 +159,8 @@
         color: #ffffff !important;
     }
 
-    .slds-rich-text-editor__output #for-dave-operatinghours,
-    .slds-rich-text-editor__output #for-dave-holidays {
+    .slds-rich-text-editor__output #operating-hours,
+    .slds-rich-text-editor__output #holidays {
         font-size: 13px !important;
         color: #7b7b7b !important;
         margin-bottom: 24px;
