--- a/sass/ergosleep.scss
+++ b/sass/ergosleep.scss
@@ -108,6 +108,10 @@
         font-family: 'Beausite', Helvetica, Arial, sans-serif;
     }
 
+    .flowRuntimeV2 {
+        position: relative;
+    }
+
     h1, h2, h3, h4, h5, h6 {
         font-family: 'Beausite', Helvetica, Arial, sans-serif;
         font-weight: 600;
