--- a/sass/morgana.scss
+++ b/sass/morgana.scss
@@ -48,6 +48,10 @@
         font-family: 'DIN Pro', Verdana, sans-serif;
     }
 
+    .flowRuntimeV2 {
+        position: relative;
+    }
+
     h1, h2, h3, h4, h5, h6 {
         font-family: 'DIN Pro Bold', Verdana, sans-serif;
         color: #05254e;
